--- a/views/counter.html
+++ b/views/counter.html
@@ -7878,7 +7878,7 @@ var _elm_lang$html$Html_Events$Options = F2(
 	function (a, b) {
 		return {stopPropagation: a, preventDefault: b};
 	});
-var _user$project$Main$update = F2(
+var _rr1000$elm_night_shyamalan$Main$update = F2(
 	function (msg, model) {
 		var _p0 = msg;
 		if (_p0.ctor === 'Increment') {
@@ -7887,10 +7887,10 @@ var _user$project$Main$update = F2(
 			return model - 1;
 		}
 	});
-var _user$project$Main$model = 0;
-var _user$project$Main$Decrement = {ctor: 'Decrement'};
-var _user$project$Main$Increment = {ctor: 'Increment'};
-var _user$project$Main$view = function (model) {
+var _rr1000$elm_night_shyamalan$Main$model = 0;
+var _rr1000$elm_night_shyamalan$Main$Decrement = {ctor: 'Decrement'};
+var _rr1000$elm_night_shyamalan$Main$Increment = {ctor: 'Increment'};
+var _rr1000$elm_night_shyamalan$Main$view = function (model) {
 	return A2(
 		_elm_lang$html$Html$div,
 		{ctor: '[]'},
@@ -7900,7 +7900,7 @@ var _user$project$Main$view = function (model) {
 				_elm_lang$html$Html$button,
 				{
 					ctor: '::',
-					_0: _elm_lang$html$Html_Events$onClick(_user$project$Main$Decrement),
+					_0: _elm_lang$html$Html_Events$onClick(_rr1000$elm_night_shyamalan$Main$Decrement),
 					_1: {ctor: '[]'}
 				},
 				{
@@ -7925,7 +7925,7 @@ var _user$project$Main$view = function (model) {
 						_elm_lang$html$Html$button,
 						{
 							ctor: '::',
-							_0: _elm_lang$html$Html_Events$onClick(_user$project$Main$Increment),
+							_0: _elm_lang$html$Html_Events$onClick(_rr1000$elm_night_shyamalan$Main$Increment),
 							_1: {ctor: '[]'}
 						},
 						{
@@ -7938,12 +7938,12 @@ var _user$project$Main$view = function (model) {
 			}
 		});
 };
-var _user$project$Main$main = _elm_lang$html$Html$beginnerProgram(
-	{model: _user$project$Main$model, view: _user$project$Main$view, update: _user$project$Main$update})();
+var _rr1000$elm_night_shyamalan$Main$main = _elm_lang$html$Html$beginnerProgram(
+	{model: _rr1000$elm_night_shyamalan$Main$model, view: _rr1000$elm_night_shyamalan$Main$view, update: _rr1000$elm_night_shyamalan$Main$update})();
 var Elm = {};
 Elm['Main'] = Elm['Main'] || {};
-if (typeof _user$project$Main$main !== 'undefined') {
-    _user$project$Main$main(Elm['Main'], 'Main', undefined);
+if (typeof _rr1000$elm_night_shyamalan$Main$main !== 'undefined') {
+    _rr1000$elm_night_shyamalan$Main$main(Elm['Main'], 'Main', undefined);
 }
 
 if (typeof define === "function" && define['amd'])
